Added settings and editing

--- a/myride/templates/myride/driverRegSuccess.html
+++ b/myride/templates/myride/driverRegSuccess.html
@@ -2,7 +2,7 @@
 
 {% block title %}Success{% endblock %}
 {% block content %}
-  <h2>Driver registration success. Please go back to dashboard</h2>
-    <h3><a href="{% url 'dashboard' %}">Dashboard</a></h3>
+  <h2>Driver registration success. Please go back</h2>
+    <h3><a href="{% url 'departList' %}">Go Back</a></h3>
 {% endblock %}
 
