--- a/myride/templates/myride/depart_list.html
+++ b/myride/templates/myride/depart_list.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>{% block title %}Django Auth Tutorial{% endblock %}</title>
+  <title>{% block title %}Depart List{% endblock %}</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
@@ -18,19 +18,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="/depart_list">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="{% url 'departList' %}">Home<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="{% url 'dashboard' %}">Settings</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Role Choose
           </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="/riderequest">Ride owner</a>
-          <a class="dropdown-item" href="/registration">Ride sharer</a>
-          <a class="dropdown-item" href="/registration">Driver</a>
+          <a class="dropdown-item" href="{% url 'ridereq' %}">Ride owner</a>
+          <a class="dropdown-item" href="{% url 'ridereq' %}">Ride sharer</a>
+          <a class="dropdown-item" href="{% url 'register' %}">Driver</a>
         </div>
       </li>
     </ul>
