--- a/myride/templates/myride/user_edit.html
+++ b/myride/templates/myride/user_edit.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Driver registration{% endblock %}
+{% block title %}User Edit{% endblock %}
 
 {% block content %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -34,8 +34,8 @@
     </form>
   </div>
 </nav>
-  <h2>Driver registration</h2>
-  <form method="post" action="/registration/" novalidate>
+  <h2>User settings</h2>
+  <form method="post" novalidate>
     {% csrf_token %}
       {% for field in form %}
            <div class="form-group">
