--- a/myride/templates/myride/vehicle_edit.html
+++ b/myride/templates/myride/vehicle_edit.html
@@ -35,7 +35,7 @@
   </div>
 </nav>
   <h2>Driver registration</h2>
-  <form method="post" action="/registration/" novalidate>
+  <form method="post" novalidate>
     {% csrf_token %}
       {% for field in form %}
            <div class="form-group">
