--- a/myride/templates/myride/rideRequestSuccess.html
+++ b/myride/templates/myride/rideRequestSuccess.html
@@ -2,6 +2,6 @@
 
 {% block title %}Success{% endblock %}
 {% block content %}
-  <h2>Ride request submitted! Please go back to dashboard</h2> <!---dashboard换成owner界面-->
-    <h3><a href="{% url 'dashboard' %}">Dashboard</a></h3>
+  <h2>Ride request submitted! A driver will be matched soon. Please go back to Home</h2> <!---dashboard换成owner界面-->
+    <h3><a href="{% url 'departList' %}">Home</a></h3>
 {% endblock %}
