--- a/myride/templates/myride/registration/ride_edit.html
+++ b/myride/templates/myride/registration/ride_edit.html
@@ -23,8 +23,8 @@
           </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="{% url 'ridereq' %}">Ride owner</a>
-          <a class="dropdown-item" href="{% url 'share_list' %}">Ride sharer</a>
-          <a class="dropdown-item" href="{% url 'driver_display' %}">Driver</a>
+          <a class="dropdown-item" href="{% url 'ridereq' %}">Ride sharer</a>
+          <a class="dropdown-item" href="{% url 'register' %}">Driver</a>
         </div>
       </li>
     </ul>
