--- a/myride/templates/myride/shareRequest.html
+++ b/myride/templates/myride/shareRequest.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 
-{% block title %}Ride Request{% endblock %}
+{% block title %}Share Request{% endblock %}
 
 {% block content %}
 <br>
-  <h2>Ride Request</h2>
+  <h2>Share Request</h2>
 <hr>
   <form method="post" action="/riderequest/" novalidate>
     {% csrf_token %}
