--- a/myride/templates/myride/driver_display.html
+++ b/myride/templates/myride/driver_display.html
@@ -1,4 +1,4 @@
-<!-- templates/base.html -->
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -39,123 +39,72 @@
       <input class="form-control mr-sm-2" type="search" href="{% url 'search' %}"name="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
-      <form method="post" action="/logout/">
-  {% csrf_token %}
-        <button type="logout" class="btn btn-primary">logout</button> {{ err_msg }}
-    <!--<input type="submit" value="Submit"> {{ err_msg }}-->
-</form>
   </div>
 </nav>
 <hr>
 
     <br>
 
+
+
   <div class="container">
       <table class="table table-bordered">
+         <div class="panel panel-default">
+  <div class="panel-heading">Ride to choose</div>
+           <br>
+</div>
         <thead>
           <tr>
             <th>Destination</th>
             <th>Arrival Date</th>
             <th>Arrival Time</th>
-            <th>Passenger Numbers</th>
-            <th>Vehicle type</th>
-            <th>Special Requirement</th>
-            <th>Status</th>
-            <th>Action</th>
+            <th>Accept</th>
           </tr>
         </thead>
         <tbody>
-            {% for  owner in owners%}
+            {% for  ride in rides%}
           <tr>
-            <td>{{ owner.destination}}</td>
-            <td>{{owner.arrival_date}}</td>
-            <td>{{owner.arrival_time}}</td>
-            <td>{{owner.num_passengers}}</td>
-              {% if not owner.vehicle_type%}
-                <td> </td>
-              {% else %}
-                 <td>{{owner.vehicle_type}}</td>
-              {% endif %}
-              {% if not owner.special_req%}
-                <td> </td>
-              {% else %}
-                 <td>{{owner.special_req}}</td>
-              {% endif %}
-            <td>Not Confirmed</td>
+            <td>{{ ride.destination}}</td>
+            <td>{{ride.arrival_date}}</td>
+            <td>{{ride.arrival_time}}</td>
             <td>
-                <a class="btn btn-success btn-xs" href="/settings/{{owner.ride_id}}/edit-ride/">edit</a>
-            </td>
-          </tr>
-            {% endfor %}
-            {% for  owner in shared%}
-          <tr>
-            <td>{{ owner.destination}}</td>
-            <td>{{owner.arrival_date}}</td>
-            <td>{{owner.arrival_time}}</td>
-            <td>{{owner.num_passengers}}</td>
-              {% if not owner.vehicle_type%}
-                <td> </td>
-              {% else %}
-                 <td>{{owner.vehicle_type}}</td>
-              {% endif %}
-              {% if not owner.special_req%}
-                <td> </td>
-              {% else %}
-                 <td>{{owner.vspecial_req}}</td>
-              {% endif %}
-            <td>Not Confirmed</td>
-            <td>
-              <a class="btn btn-success btn-xs">edit</a>
-            </td>
-          </tr>
-            {% endfor %}
-            {% for  owner in view_list%}
-          <tr>
-            <td>{{ owner.destination}}</td>
-            <td>{{owner.arrival_date}}</td>
-            <td>{{owner.arrival_time}}</td>
-            <td>{{owner.num_passengers}}</td>
-              {% if not owner.vehicle_type%}
-                <td> </td>
-              {% else %}
-                 <td>{{owner.vehicle_type}}</td>
-              {% endif %}
-              {% if not owner.special_req%}
-                <td> </td>
-              {% else %}
-                 <td>{{owner.vspecial_req}}</td>
-              {% endif %}
-            <td>Confirmed</td>
-            <td>
-
-            </td>
-          </tr>
-            {% endfor %}
-            {% for  owner in completed_list%}
-          <tr>
-            <td>{{ owner.destination}}</td>
-            <td>{{owner.arrival_date}}</td>
-            <td>{{owner.arrival_time}}</td>
-            <td>{{owner.num_passengers}}</td>
-              {% if not owner.vehicle_type%}
-                <td> </td>
-              {% else %}
-                 <td>{{owner.vehicle_type}}</td>
-              {% endif %}
-              {% if not owner.special_req%}
-                <td> </td>
-              {% else %}
-                 <td>{{owner.vspecial_req}}</td>
-              {% endif %}
-            <td>Completed</td>
-            <td>
+                <a class="btn btn-success btn-xs" href="/driver_display/{{ride.ride_id}}/accept_ride/">select</a>
             </td>
           </tr>
             {% endfor %}
         </tbody>
       </table>
 </div>
+    <br>
+    <br>
+
+  <div class="container">
+      <table class="table table-bordered">
+        <div class="panel panel-default">
+  <div class="panel-heading">Complete Ride</div>
 </div>
+               <br>
+        <thead>
+          <tr>
+            <th>Destination</th>
+            <th>Arrival Date</th>
+            <th>Arrival Time</th>
+            <th>Complete if finished</th>
+          </tr>
+        </thead>
+        <tbody>
+            {% for  curr in currs%}
+          <tr>
+            <td>{{curr.destination}}</td>
+            <td>{{curr.arrival_date}}</td>
+            <td>{{curr.arrival_time}}</td>
+            <td>
+                <a class="btn btn-success btn-xs" href="/driver_display/{{curr.ride_id}}/complete_ride/">complete</a>
+            </td>
+          </tr>
+            {% endfor %}
+        </tbody>
+      </table>
 </div>
 
 
