--- a/myride/templates/myride/ride_edit.html
+++ b/myride/templates/myride/ride_edit.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Driver registration{% endblock %}
+{% block title %}Edit your ride{% endblock %}
 
 {% block content %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -23,8 +23,8 @@
           </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="{% url 'ridereq' %}">Ride owner</a>
-          <a class="dropdown-item" href="{% url 'ridereq' %}">Ride sharer</a>
-          <a class="dropdown-item" href="{% url 'register' %}">Driver</a>
+          <a class="dropdown-item" href="{% url 'share_list' %}">Ride sharer</a>
+          <a class="dropdown-item" href="{% url 'driver_display' %}">Driver</a>
         </div>
       </li>
     </ul>
@@ -34,7 +34,7 @@
     </form>
   </div>
 </nav>
-  <h2>Driver registration</h2>
+  <h2>Edit your ride</h2>
   <form method="post" novalidate>
     {% csrf_token %}
       {% for field in form %}
