--- a/myride/templates/myride/ride_display.html
+++ b/myride/templates/myride/ride_display.html
@@ -49,7 +49,10 @@
 <hr>
 
     <br>
-<a class="btn btn-success btn-xs" href="/depart_list/"}>Back to home page</a>
+              <div class="container">
+        <div style="margin-bottom: 10px">
+          <a class="btn btn-primary" href="/depart_list/"}>Back to home page</a>
+        </div>
   <div class="container">
       <table class="table table-bordered">
         <thead>
