Minor fix needed

--- a/myride/templates/myride/depart_list.html
+++ b/myride/templates/myride/depart_list.html
@@ -107,7 +107,7 @@
               {% endif %}
             <td>Not Confirmed</td>
             <td>
-        <a class="btn btn-success btn-xs" href="/settings/{{owner.ride_id}}/edit-ride/">Cancel Share</a>
+        <a class="btn btn-success btn-xs" href="/settings/{{owner.ride_id}}/cancel_share/">Cancel Share</a>
             </td>
           </tr>
                 {% endif %}
